Add openapi response example
