# src/entities/todo.ts
@@ -1,15 +1,15 @@
-import { IsString, Length } from 'class-validator';
+import { Length, IsString } from 'class-validator';
 import { Todo } from '@src/models/todo';
 /**
  * New todo to add (expected request)
  * note: you can also use a generic `Partial<Todo>`
  */
-export class TodoNewRequest implements Omit<Todo, 'createdAt' | 'completed' | 'createdBy'> {
-  @IsString()
+export class TodoNewRequest implements Pick<Todo, 'content' | 'id'> {
   @Length(1, 1024)
+  @IsString()
   readonly content!: string;
 
-  @IsString()
   @Length(1, 50)
+  @IsString()
   readonly id!: string;
 }
